--- a/package.json
+++ b/package.json
@@ -85,5 +85,10 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "angular-slick-carousel": "^3.1.7",
+    "jquery": "^3.2.1",
+    "slick": "^1.12.2"
   }
 }
